Cleanup layout issues in the document component.
Use the styled-text mixin for annotation cards in the document
component so that it looks consistent with the annotation markdown
styling for annotation cards in the client sidebar, which uses
the same mixin.

Remove unused css import from help-page.scss.

--- a/h/static/styles/partials-v2/_base.scss
+++ b/h/static/styles/partials-v2/_base.scss
@@ -19,6 +19,7 @@ $highlight: #58cef4;
 // ----------
 
 $sans-font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif !default;
+$mono-font-family: Open Sans Mono, Menlo, DejaVu Sans Mono, monospace !default;
 
 $normal-font-size: 13px;
 $normal-line-height: 15px;
