--- a/h/static/styles/partials-v2/_search.scss
+++ b/h/static/styles/partials-v2/_search.scss
@@ -46,6 +46,8 @@
 .search-result-bucket__domain {
   width: 120px;
   color: $grey-4;
+  margin-right: 10px;
+  word-wrap: break-word;
 }
 
 .search-result-bucket__content {
@@ -62,6 +64,7 @@
 .search-result-bucket__title {
   font-weight: bold;
   flex-grow: 1;
+  margin-bottom: 10px;
 }
 
 .search-result-bucket__annotation-cards-container {
